src/objects/CareBenefitVerifyRequest.object
<CustomObject>
    <fields>
        <fullName>DiagnosisCode__c</fullName>
        <label>Diagnosis Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcedureCode__c</fullName>
        <label>Procedure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_CareBenefitVerifyRequests</fullName>
        <filterScope>Everything</filterScope>
        <label>All Care Benefit Verify Requests</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>